--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".MedDetails"></activity>
+        <activity
+            android:name=".MedDetails"
+            android:parentActivityName=".Medicine">
+
+        </activity>
     </application>
 
 </manifest>
