--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
         </activity>
         <activity
             android:name=".MedDetails"
-            android:parentActivityName=".medicine.Medicine"></activity>
-        <activity android:name=".medicine_book.MedicalBook"></activity>
+            android:parentActivityName=".medicine.Medicine" />
+        <activity android:name=".medicine_book.MedicalBook" />
+        <activity android:name=".AboutUs" />
+        <activity android:name=".MedicineEnter"></activity>
     </application>
 
 </manifest>
