--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.regis.medsystem">
+    package="com.example.regis.medsystem"
+
+    >
 
     <application
         android:allowBackup="true"
@@ -17,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".medicine.Medicine"
+            android:name=".medicine.MedicineActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -25,10 +27,10 @@
         </activity>
         <activity
             android:name=".MedDetails"
-            android:parentActivityName=".medicine.Medicine" />
+            android:parentActivityName=".medicine.MedicineActivity" />
         <activity android:name=".medicine_book.MedicalBook" />
         <activity android:name=".AboutUs" />
-        <activity android:name=".MedicineEnter"></activity>
+        <activity android:name=".MedicineEnter" />
     </application>
 
 </manifest>
