--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.regis.medsystem">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:name=".MyApplication"
@@ -38,12 +41,9 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".MedicineEnter" />
-        <activity android:name=".Splash">
-
-        </activity>
+        <activity android:name=".Splash"></activity>
         <activity android:name=".VolleyExample" />
-
-
+        <activity android:name=".MyViewPdf"></activity>
     </application>
 
 </manifest>
