--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,14 @@
         <activity
             android:name=".MedDetails"
             android:parentActivityName=".medicine.MedicineActivity" />
-        <activity android:name=".medicine_book.MedicalBook" />
+        <activity
+            android:name=".medicine_book.MedicalBook"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+
+        </activity>
         <activity
             android:name=".AboutUs"
             android:parentActivityName=".MainActivity">
