--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion;
     annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion;
 
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.volley:volley:1.1.0'
@@ -37,7 +38,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.karumi:dexter:4.2.0'
-
     testCompile 'junit:junit:4.12'
 }
