--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -15,9 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_ny"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".medicine.MedicineActivity"
             android:parentActivityName=".MainActivity">
@@ -34,7 +30,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
-
         </activity>
         <activity
             android:name=".AboutUs"
@@ -52,7 +47,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".VolleyExample" />
-        <activity android:name=".MyViewPdf"></activity>
+        <activity android:name=".MyViewPdf" />
+        <activity android:name=".Login" />
+        <activity android:name=".Profile"></activity>
     </application>
 
 </manifest>
