--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity android:name=".VolleyExample" />
         <activity android:name=".MyViewPdf" />
         <activity android:name=".Login" />
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".Profile" />
+        <activity android:name=".ArticleDemo"></activity>
     </application>
 
 </manifest>
