--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
-apply plugin: 'com.android.application'
 
+apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.regis.medsystem"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -22,8 +21,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
@@ -31,17 +30,19 @@ dependencies {
 
 
 
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:design:27.1.0'
-    compile 'com.android.volley:volley:1.1.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:cardview-v7:27.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
-    compile 'com.cloudinary:cloudinary-android:1.24.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.karumi:dexter:4.2.0'
-    testCompile 'junit:junit:4.12'
-    compile 'me.biubiubiu.justifytext:library:1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.3.0'
+    implementation 'com.cloudinary:cloudinary-android:1.24.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.karumi:dexter:4.2.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'me.biubiubiu.justifytext:library:1.1'
 }
